[package]
name = "woz"
version = "1.3.1"
authors = ["Alex Kehayias <alex.kehayias@gmail.com>"]
edition = "2018"
license = "EPL-1.0"
description = """
Woz is a WebAssembly progressive web app (PWA) toolchain for deploying performant mobile apps distributed for free with a hyperlink.
"""
homepage = "https://woz.sh"
repository = "https://github.com/alexkehayias/woz"
keywords = ["wasm", "webassembly", "woz", "pwa"]
categories = ["wasm", "development-tools"]

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
failure = "0.1.5"
flate2 = "1.0.9"
futures = "0.3.4"
handlebars = "2.0.1"
lazy_static = "1.3.0"
rand = "0.7.0"
regex = "1"
ring = "0.16.9"
rusoto_cognito_identity = "0.43.0"
rusoto_cognito_idp = "0.43.0"
rusoto_cognito_sync = "0.43.0"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_s3 = "0.43.0"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"
stderrlog = "0.4"
termion = "1.5.1"
tokio = {version = "0.2", features = ["full"]}
toml = "0.5.1"