[package]
name = "woz"
version = "1.4.0"
authors = ["Alex Kehayias <alex.kehayias@gmail.com>"]
edition = "2018"
license = "EPL-1.0"
description = """
Woz is a WebAssembly progressive web app (PWA) toolchain for deploying performant mobile apps distributed for free with a hyperlink.
"""
homepage = "https://woz.sh"
repository = "https://github.com/alexkehayias/woz"
keywords = ["wasm", "webassembly", "woz", "pwa"]
categories = ["wasm", "development-tools"]

[badges]
travis-ci = { repository = "https://github.com/alexkehayias/woz", branch = "master" }

[dependencies]
clap = {version = "2.33.1", features = ["yaml"]}
failure = "0.1.8"
flate2 = "1.0.14"
futures = "0.3.5"
handlebars = "3.0.1"
lazy_static = "1.3.0"
rand = "0.7.3"
regex = "1.3.7"
ring = "0.16.13"
rusoto_cognito_identity = "0.43.0"
rusoto_cognito_idp = "0.43.0"
rusoto_cognito_sync = "0.43.0"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_s3 = "0.43.0"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
stderrlog = "0.4.3"
termion = "1.5.5"
tokio = {version = "0.2.21", features = ["full"]}
toml = "0.5.6"